--- a/app/views/default/index.html
+++ b/app/views/default/index.html
@@ -10,7 +10,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<title>{{ websiteName }}</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600' rel='stylesheet' type='text/css'>
 		<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
 		<script src="js/jquery.min.js"></script>
 	</head>
