--- a/src/client/views/index.ejs
+++ b/src/client/views/index.ejs
@@ -14,6 +14,19 @@
 	</head>
 	<body>
         <div id="root"></div>
+        <script>
+            // Prevent XSS Vulnerability
+            const htmlDecode = (input) => {
+                var e = document.createElement('div');
+                e.innerHTML = input;
+                return e.childNodes.length === 0 ? "" : e.childNodes[0].nodeValue;
+            }
+
+            // Pass the data from server to client
+            const language = '<%= language %>';
+            const text = JSON.parse(htmlDecode("<%= JSON.stringify(text) %>"));
+            const settings = JSON.parse(htmlDecode("<%= JSON.stringify(settings) %>"));
+        </script>
         <script src="js/bundle.js"></script>
     </body>
 </html>
