--- a/src/client/views/index.ejs
+++ b/src/client/views/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>My Press</title>
+		<title><%=settings.appName%></title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<!-- Facebook property -->
@@ -13,7 +13,7 @@
         <script src="https://unpkg.com/react-dom@15/dist/react-dom.min.js"></script>
 	</head>
 	<body>
-        <div id="root"></div>
+        <div id="mypress-root"></div>
         <script>
             // Prevent XSS Vulnerability
             const htmlDecode = (input) => {
